# tinygp

./: CMakeLists.txt  Makefile  bugger.cpp  bugger.h  genetic.cpp  genetic.h  main.cpp  readme.md  schema.cpp  schema.h  tiny_gp.java  tiny_gp.java~
